--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardCornerRadius="15dp">
@@ -50,7 +50,8 @@
                     android:text="Building Title"
                     android:textAlignment="viewStart"
                     android:textAllCaps="false"
-                    android:textColor="#FFFFFF"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+                    android:textColor="#F00000"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -63,14 +64,15 @@
                     android:drawablePadding="2dp"
                     android:paddingRight="5dp"
                     android:text="Address"
-                    android:textColor="@android:color/background_light"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textColor="#FF0000"
                     android:textSize="15sp" />
 
 
             </LinearLayout>
 
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
     </FrameLayout>
