--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -27,14 +27,8 @@
                 android:adjustViewBounds="true"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
-                />
 
-            <ImageView
-                android:id="@+id/uploadedImgPreview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:alpha=".5"
-                android:scaleType="centerCrop" />
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,31 +36,16 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/building_name"
+                    android:id="@+id/post_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="100dp"
                     android:text="Building Title"
-                    android:textAlignment="viewStart"
                     android:textAllCaps="false"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-                    android:textColor="#F00000"
+                    android:textColor="#D51717"
                     android:textSize="24sp"
                     android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="0dp"
-                    android:drawablePadding="2dp"
-                    android:paddingRight="5dp"
-                    android:text="Address"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                    android:textColor="#FF0000"
-                    android:textSize="15sp" />
 
 
             </LinearLayout>
