--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -29,13 +29,13 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/username_aa3"
+                        android:id="@+id/post_desc"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginLeft="8dp"
-                        android:layout_marginEnd="108dp"
-                        android:layout_marginRight="108dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
                         android:fontFamily="sans-serif"
                         android:text="Carefully curated post description"
                         android:textSize="14sp"
@@ -73,7 +73,8 @@
                         android:textColor="#2196F3"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/recycler_view_too" />
+                        app:layout_constraintTop_toBottomOf="@+id/recycler_view_too"
+                        app:layout_constraintVertical_bias="0.465" />
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/view2"
@@ -85,22 +86,38 @@
                         android:elevation="12dp"
                         app:cardCornerRadius="40dp"
                         app:cardElevation="0dp"
-                        app:layout_constraintEnd_toStartOf="@+id/username_aa3"
+                        app:layout_constraintEnd_toStartOf="@+id/post_desc"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/cardView">
 
                     </androidx.cardview.widget.CardView>
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
+                        android:background="#E9E9E9"
+                        app:layout_constraintBottom_toTopOf="@+id/recycler_view_too"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/post_desc" />
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_view_too"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
                         android:background="#FFFFFF"
                         android:nestedScrollingEnabled="false"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/username_aa3"
-                        app:layout_constraintVertical_bias="0.2"
-                        tools:layout_editor_absoluteX="0dp">
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/post_desc"
+                        app:layout_constraintVertical_bias="0.0">
 
                     </androidx.recyclerview.widget.RecyclerView>
 
@@ -141,7 +158,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginLeft="16dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="32dp"
+                        android:layout_marginBottom="32dp"
                         android:ems="10"
                         android:hint="Write a comment"
                         android:inputType="textPersonName"
@@ -152,6 +170,22 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/recycler_view_too"
                         app:layout_constraintVertical_bias="0.0" />
+
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="32dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginBottom="32dp"
+                        android:background="#E9E9E9"
+                        app:layout_constraintBottom_toTopOf="@+id/comment_field"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/recycler_view_too" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
