--- a/app/src/main/res/menu/navmenu.xml
+++ b/app/src/main/res/menu/navmenu.xml
@@ -7,12 +7,13 @@
         <item
             android:id="@+id/nav_profile"
             android:title="My profile"
+            android:onClick="profile"
             />
 
         <item
             android:id="@+id/nav_add"
             android:title="Add a post"
-
+            android:onClick="add"
             />
 
 
