--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -90,6 +90,16 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/cardView">
 
+                        <ImageView
+                            android:id="@+id/admin_p"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:padding="0dp"
+                            android:scaleType="centerCrop"
+
+                            />
+
                     </androidx.cardview.widget.CardView>
 
                     <View
