--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -18,16 +18,17 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="708dp">
+                android:layout_height="735dp">
 
                 <EditText
                     android:id="@+id/name_editText2_00"
-                    android:layout_width="378dp"
-                    android:layout_height="57dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_width="316dp"
+                    android:layout_height="42dp"
+                    android:layout_marginTop="48dp"
                     android:hint="Write a caption..."
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.493"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView_00" />
 
@@ -35,11 +36,9 @@
                     android:id="@+id/imageView_00"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
-                    android:layout_marginStart="52dp"
-                    android:layout_marginLeft="52dp"
-                    android:layout_marginTop="108dp"
+                    android:layout_marginTop="100dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.05"
+                    app:layout_constraintHorizontal_bias="0.495"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,20 +46,18 @@
                     android:id="@+id/upload_btn_00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="64dp"
                     android:text="Upload"
                     android:textSize="36sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/spinnerUpload_00"
-                    app:layout_constraintVertical_bias="0.881" />
+                    app:layout_constraintTop_toBottomOf="@+id/spinnerUpload" />
 
                 <Spinner
-                    android:id="@+id/spinnerUpload_00"
+                    android:id="@+id/spinnerUpload"
                     android:layout_width="196dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="36dp"
+                    android:layout_marginTop="56dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.497"
                     app:layout_constraintStart_toStartOf="parent"
