--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -22,13 +22,12 @@
 
                 <EditText
                     android:id="@+id/name_editText2_00"
-                    android:layout_width="316dp"
-                    android:layout_height="42dp"
-                    android:layout_marginTop="48dp"
+                    android:layout_width="325dp"
+                    android:layout_height="153dp"
+                    android:layout_marginTop="28dp"
                     android:hint="Write a caption..."
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.493"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView_00" />
 
@@ -36,7 +35,7 @@
                     android:id="@+id/imageView_00"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
-                    android:layout_marginTop="100dp"
+                    android:layout_marginTop="52dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.495"
                     app:layout_constraintStart_toStartOf="parent"
@@ -57,13 +56,12 @@
                     android:id="@+id/spinnerUpload"
                     android:layout_width="196dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="56dp"
+                    android:layout_marginTop="36dp"
                     android:spinnerMode="dialog"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.497"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/name_editText2_00"
-                    />
+                    app:layout_constraintTop_toBottomOf="@+id/name_editText2_00" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
