--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.atelier.activities.MainActivity"
     android:id="@+id/drawer_layout"
-    android:background="#303030"
+    android:background="#050505"
     >
 
 
@@ -39,12 +39,13 @@
 
                     <ImageView
                         android:id="@+id/imageView4"
-                        android:layout_width="453dp"
-                        android:layout_height="166dp"
+                        android:layout_width="432dp"
+                        android:layout_height="200dp"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.644"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/tierrrrrrr" />
+                        app:srcCompat="@drawable/tierlogo" />
 
                     <ImageView
                         android:id="@+id/threedots"
@@ -55,18 +56,30 @@
                         app:layout_constraintHorizontal_bias="0.936"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/imageView4"
-                        app:srcCompat="@drawable/ic_menu_black_24dp" />
+                        app:srcCompat="@drawable/ic_menu_white_24dp" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="14dp"
+                        android:layout_height="15dp"
+                        android:layout_marginStart="8dp"
+                        android:background="@drawable/filter_white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.90999997" />
 
                     <Spinner
                         android:id="@+id/spinnerr"
-                        android:layout_width="147dp"
-                        android:layout_height="21dp"
-                        android:layout_marginTop="16dp"
-                        android:background="#ffffff"
-                        app:layout_constraintEnd_toStartOf="@+id/threedots"
-                        app:layout_constraintHorizontal_bias="0.061"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                        android:layout_width="152dp"
+                        android:layout_height="22dp"
+
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.034"
+                        app:layout_constraintStart_toEndOf="@+id/textView5"
+                        app:layout_constraintTop_toTopOf="@+id/imageView4"
+                        app:layout_constraintVertical_bias="0.94" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -77,6 +90,7 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
                 android:background="#FFFFFF"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -84,7 +98,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2"
-                app:layout_constraintVertical_bias="0.017"
+                app:layout_constraintVertical_bias="0.0"
                 app:reverseLayout="true"
                 app:stackFromEnd="true">
 
