--- a/app/src/main/res/layout/post_single_item_in_profile.xml
+++ b/app/src/main/res/layout/post_single_item_in_profile.xml
@@ -4,11 +4,11 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:layout_marginTop="1dp"
-    android:orientation="horizontal"
-    android:layout_marginBottom="1dp"
     android:layout_marginLeft="1dp"
-    android:layout_marginRight="1dp">
+    android:layout_marginTop="1dp"
+    android:layout_marginRight="1dp"
+    android:layout_marginBottom="1dp"
+    android:orientation="horizontal">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -25,8 +25,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:padding="0dp"
-                android:scaleType="centerCrop"
-                />
+                android:scaleType="centerCrop" />
 
 
         </androidx.cardview.widget.CardView>
