--- a/app/src/main/res/layout/spinner_items.xml
+++ b/app/src/main/res/layout/spinner_items.xml
@@ -2,8 +2,8 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="#FFFFFF"
     android:background="#121214"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:textColor="#FFFFFF">
 
 </CheckedTextView>
