--- a/app/src/main/res/layout/spinner_main.xml
+++ b/app/src/main/res/layout/spinner_main.xml
@@ -2,8 +2,7 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textColor="#FFFFFF"
     android:background="#050505"
-    >
+    android:textColor="#FFFFFF">
 
 </CheckedTextView>
